tests/fixtures/errors/pointer_type_mismatch.chisa
let x = 1
let p: Pointer<number> = ptr(x)
let q: Pointer<boolean> = p
